--- a/src/Runtime/CMakeLists.txt
+++ b/src/Runtime/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(jni)
 # such static library in a shared library can cause runtime failure on some architectures,
 # such as z. So we override the default and explicitly compile with -fPIC.
 add_onnx_mlir_library(cruntime STATIC
+  OMIndexLookup.c
   OMInstrument.c
   OMRandomNormal.c
   OMTensor.c
@@ -25,6 +26,7 @@ set_target_properties(cruntime
   )
 
 add_onnx_mlir_library(OMTensorUtils
+  OMIndexLookup.cpp
   OMInstrument.cpp
   OMRandomNormal.cpp
   OMTensor.cpp
